--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fontsource/press-start-2p": "^5.2.7",
+    "@next/font": "^14.2.15",
+    "@react-spring/parallax": "^10.0.3",
+    "@react-spring/web": "^10.0.3",
+    "@supabase/supabase-js": "^2.95.3",
+    "google-fonts": "^1.0.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
