--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-spring/parallax": "^10.0.3",
     "@react-spring/web": "^10.0.3",
     "@supabase/supabase-js": "^2.95.3",
+    "@types/react-howler": "^5.2.3",
     "google-fonts": "^1.0.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-howler": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
