--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@next/font": "^14.2.15",
     "@react-spring/parallax": "^10.0.3",
     "@react-spring/web": "^10.0.3",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.95.3",
     "@types/react-howler": "^5.2.3",
+    "@types/three": "^0.182.0",
     "google-fonts": "^1.0.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-howler": "^5.2.0"
+    "react-howler": "^5.2.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^20",
